--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -31,7 +31,7 @@
 
 [[constraint]]
   name = "github.com/aws/aws-sdk-go-v2"
-  version = "2.0.0-preview.4"
+  version = "v1.0.0"
 
 [[constraint]]
   name = "gopkg.in/ini.v1"
